fix pixel shift

--- a/styles/pixel.css
+++ b/styles/pixel.css
@@ -14,6 +14,11 @@
 }
 
 .pixels {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  inset: 0;
+
   .overlay {
     position: absolute;
     inset: 0;
